core_tests = [
  'gst/gstatomicqueue',
  'gst/gstbuffer',
  'gst/gstbufferlist',
  'gst/gstbufferpool',
  'gst/gstmeta',
  'gst/gstmemory',
  'gst/gstbus',
  'gst/gstcaps',
  'gst/gstcapsfeatures',
  'gst/gstdatetime',
  'gst/gstdevice',
  'gst/gstinfo',
  'gst/gstiterator',
  'gst/gstmessage',
  'gst/gstminiobject',
  'gst/gstobject',
  'gst/gstpad',
  'gst/gstparamspecs',
  'gst/gstpipeline',
  'gst/gstpoll',
  'gst/gstsegment',
  'gst/gstsystemclock',
  'gst/gstclock',
  'gst/gststructure',
  'gst/gsttag',
  'gst/gsttagsetter',
  'gst/gsttask',
  'gst/gsttoc',
  'gst/gsttocsetter',
  'gst/gstvalue',
  'generic/states',
  'libs/adapter',
  'libs/bitreader',
  'libs/bytereader',
  'libs/bytewriter',
  'libs/bitreader-noinline',
  'libs/bytereader-noinline',
  'libs/bytewriter-noinline',
  'libs/flowcombiner',
  'libs/sparsefile',
  'libs/collectpads',
  'libs/gstnetclientclock',
  'libs/gstnettimeprovider',
  'libs/gsttestclock',
  'libs/transform1',
  'tools/gstinspect',
]

foreach t : core_tests
  exe = executable(t, '@0@.c'.format(t),
    include_directories : [configinc, libsinc],
    c_args : ['-DHAVE_CONFIG_H=1'],
    link_with : [gst_check, gst_net, gst_base, libgst],
    dependencies : [gio_dep, gobject_dep, gmodule_dep, glib_dep],
  )
  test(t, exe)
endforeach
